--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<iochti-navbar></iochti-navbar>
+<iochti-navbar [account]="account"></iochti-navbar>
 
 <section class="section">
    <div class="container">
@@ -7,10 +7,7 @@
         <iochti-menu></iochti-menu>
       </div>
       <div class="column is-8">
-        <h1 class="title">Section</h1>
-        <h2 class="subtitle">
-          A simple container to divide your page into <strong>sections</strong>, like the one you're currently reading
-        </h2>
+        <router-outlet></router-outlet>
       </div>
     </div>
    </div>
