Added group list

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,23 +3,13 @@
     General
   </p>
   <ul class="menu-list">
-    <li><a>Dashboard</a></li>
-    <li><a>Customers</a></li>
+    <li><a routerLink="/dashboard" routerLinkActive="is-active">Dashboard</a></li>
   </ul>
   <p class="menu-label">
     Administration
   </p>
   <ul class="menu-list">
-    <li>
-      <a>Manage Your Things</a>
-      <ul>
-        <li><a>Groups</a></li>
-        <li><a>Things</a></li>
-      </ul>
-    </li>
-
-    <li><a>Invitations</a></li>
-    <li><a>Cloud Storage Environment Settings</a></li>
-    <li><a>Authentication</a></li>
+    <li><a routerLink="/dashboard/groups" routerLinkerActive="is-active">Groups</a></li>
+    <li><a routerLink="/dashboard/things" routerLinkerActive="is-active">Things</a></li>
   </ul>
 </aside>
