--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,7 +15,7 @@
         <figure class="image is-32x32" style="margin-right: 8px;">
           <img [src]="account.avatar_url">
         </figure>
-        Profile
+        {{account.login}}
       </a>
       <a class="nav-item is-tab is-hidden-tablet is-active">Home</a>
       <a class="nav-item is-tab">Log Out</a>
