--- a/src/app/groups/groups.component.html
+++ b/src/app/groups/groups.component.html
@@ -1,5 +1,7 @@
 <h1 class="title">Thing groups</h1>
-
+<div style="padding-top: 20px; padding-bottom: 20px;">
+  <button class="button is-success" (click)="handleOpenModal()">New Group</button>
+</div>
 <div
  class="columns is-multiline is-mobile"
  *ngIf="!groupsFetching; else elseBlock"
@@ -7,3 +9,4 @@
  <iochti-group *ngFor="let group of groups" [group]="group" class="column is-half"></iochti-group>
 </div>
 <ng-template #elseBlock>Loading</ng-template>
+<iochti-modal-group [(isOpen)]="isModalOpen"></iochti-modal-group>
